--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,13 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.22.1"
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^4.22.1",
+    "mongoose": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.1.11"
   },
   "description": "",
   "main": "index.js",
